Fixed homepage redirect to /summary

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -87,7 +87,7 @@
                     <span class="image">
                         <img src="/images/chanel.png" alt="" />
                     </span>
-                    <a href="/generic">
+                    <a href="/summary">
                         <h2>Chanel</h2>
                         <div class="content">
                             <p>specializes in women's ready-to-wear, luxury goods, and accessories</p>
@@ -98,7 +98,7 @@
                     <span class="image">
                         <img src="/images/dior.png" alt="" />
                     </span>
-                    <a href="/generic">
+                    <a href="/summary">
                         <h2>Dior</h2>
                         <div class="content">
                             <p>renowned for its elegant and innovative designs</p>
@@ -109,7 +109,7 @@
                     <span class="image">
                         <img src="/images/gucci.png" alt="" />
                     </span>
-                    <a href="/generic">
+                    <a href="/summary">
                         <h2>Gucci</h2>
                         <div class="content">
                             <p>Gucci's product lines include handbags, ready-to-wear, footwear, accessories,
@@ -121,7 +121,7 @@
                     <span class="image">
                         <img src="/images/balenciaga.png" alt="" />
                     </span>
-                    <a href="/generic">
+                    <a href="/summary">
                         <h2>Balenciaga</h2>
                         <div class="content">
                             <p>known for impeccable craftsmanship and innovative designs</p>
